@@ -9,7 +9,8 @@ Slated for 2.17.0
   buffers, both direct and in-Java.
 - Added: com.blackrook.commons.Singleton for managing and creating singleton
   instances of classes.
-- Added: com.blackrook.commons.CommonTokenizer for tokenizing the average line of text.
+- Added: com.blackrook.commons.CommonTokenizer for tokenizing an average line of text.
+- Added: com.blackrook.commons.Counter: a thread-safe counter object.
 
 Changed in 2.16.0
 =================
